@@ -1,4 +1,6 @@
 Sigil v0.1.7 <ADD DATE>
+    - Sigil now loads HTML metadata when importing if metadata conforms to Dublin Core;
+    code contribution from Kevin Hendricks (issue #160)
     - fixed an issue with loading TXT files with unescaped character entity references (issue #202)
     - fixed an issue with headings not being centered after View switches (issue #200)
     - fixed an issue with files with uppercase extensions being loaded incorrectly
